# export-wechat-emoji

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
scripts/: dump-emoticon-db-key-macos.sh  dump-emoticon-urls-macos.sh  install-wxemoticon.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/consts/: text.ts
src/services/: archive.ts  exporter.ts  stodownload.ts  system.ts  wechat.ts
tools/wechat-key-dumper/: build.sh  key_dumper.c
